Add Java 25 support